--- a/Source/LeaveTheMap/LeaveTheMap.csproj
+++ b/Source/LeaveTheMap/LeaveTheMap.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>LeaveTheMap</RootNamespace>
     <AssemblyName>LeaveTheMap</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-	<LangVersion>8.0</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <OutputPath>..\..\1.6\Assemblies\</OutputPath>
@@ -54,9 +54,12 @@
     <Reference Include="UnityEngine.IMGUIModule">
       <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="LeaveTheMap.cs" />
     <Compile Include="LeaveTheMapSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
