--- a/Source/LeaveTheMap/LeaveTheMap.csproj
+++ b/Source/LeaveTheMap/LeaveTheMap.csproj
@@ -59,9 +59,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExitGridUpdateManager.cs" />
     <Compile Include="LeaveTheMap.cs" />
     <Compile Include="LeaveTheMapSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tmp.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
